--- a/docs/meetups/2025/202501-enero.md
+++ b/docs/meetups/2025/202501-enero.md
@@ -1,56 +1,36 @@
 ---
 title: "Crea extensiones para LibreOffice / PCI DSS en Python"
-tags:
-
-  - Python
-
-  - LibreOffice
-
-  - Security
-
-  - PCI DSS
-
-  - Automation
-
-  - Docker
-
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - 14 2025
+# Meetup #PythonCDMX <i class="fab fa-python"></i> - Enero 2025
 
-<div class="event-highlight" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; text-align: center; box-shadow: 0 8px 32px rgba(102, 126, 234, 0.3);">
-    <h2 style="margin: 0 0 1rem 0; font-size: 2.5rem;"> Crea extensiones para LibreOffice / PCI DSS en Python</h2>
-    <p style="font-size: 1.2rem; margin: 0; opacity: 0.9;">Dos charlas sobre LibreOffice y seguridad</p>
+<div class="meetup-hero">
+    <h1>✨ Crea extensiones para LibreOffice / PCI DSS en Python ✨</h1>
+    <p class="meetup-subtitle">Dos charlas sobre LibreOffice y seguridad</p>
 </div>
-
-<div class="meetup-header" style="text-align: center; margin-bottom: 2rem;">
-    <img src="/../../images/meetup/202501-pythoncdmx.png" alt="Banner del evento" style="max-width: 100%; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
-    </div>
-
-
 
 ## Información del Evento
 
-<div class="event-details" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin: 2rem 0;">
-    <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #28a745; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #28a745;"><i class="fas fa-calendar"></i> Fecha</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Martes 14 de Enero, 2025</p>
+<div class="event-details">
+    <div class="detail-card date-card">
+        <h3><i class="fas fa-calendar-alt"></i> Fecha</h3>
+        <p>Martes 14 de Enero, 2025</p>
     </div>
-    <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #007bff; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #007bff;"><i class="fas fa-clock"></i> Hora</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">18:30 - 21:00</p>
+    <div class="detail-card time-card">
+        <h3><i class="fas fa-clock"></i> Hora</h3>
+        <p>18:30 - 21:00</p>
     </div>
-    <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #dc3545; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #dc3545;"><i class="fas fa-map-marker-alt"></i> Lugar</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Wizeline México</p>
+    <div class="detail-card location-card">
+        <h3><i class="fas fa-map-marker-alt"></i> Lugar</h3>
+        <p>Wizeline México</p>
     </div>
-    <div class="detail-card" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); color: white; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #28a745; box-shadow: 0 4px 16px rgba(40, 167, 69, 0.3);">
-        <h3 style="margin: 0 0 0.5rem 0; color: white;"><i class="fas fa-gift"></i> ¡GRATIS!</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Entrada completamente gratuita</p>
+    <div class="detail-card free-card">
+        <h3><i class="fas fa-gift"></i> ¡GRATIS!</h3>
+        <p>Entrada completamente gratuita</p>
     </div>
-    <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #ffc107; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #ffc107;"><i class="fas fa-ticket-alt"></i> RSVP</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;"><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
+    <div class="detail-card rsvp-card">
+        <h3><i class="fas fa-ticket-alt"></i> RSVP</h3>
+        <p><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
     </div>
 </div>
 
@@ -64,7 +44,6 @@ tags:
         <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> Creando extensiones para LibreOffice, con Python</h3>
         <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 45 minutos</p>
     </div>
-
     <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
         <div class="speaker-photo" style="flex-shrink: 0;">
             <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="elMau (Mauricio B.)" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
@@ -74,37 +53,34 @@ tags:
             <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">Desarrollador LibreOffice</p>
             <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Especialista en desarrollo de extensiones para LibreOffice y automatización de oficina.</p>
             <div class="speaker-links">
-
-
-
+                
+                
+                
             </div>
         </div>
     </div>
-
     <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
         <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">Aprende a potenciar LibreOffice creando extensiones personalizadas con Python. Descubre las herramientas y técnicas para desarrollar complementos que automaticen tareas y añadan nuevas funcionalidades.</p>
-
-
+        
         <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #18A303;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #18A303; font-size: 1rem;"><i class="fas fa-file-alt"></i> LibreOffice</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Suite de oficina</p>
             </div>
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #3776AB;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #3776AB; font-size: 1rem;"><i class="fab fa-python"></i> Python</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Lenguaje de scripting</p>
             </div>
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #6c757d;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #6c757d; font-size: 1rem;"><i class="fas fa-cog"></i> Automation</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Automatización</p>
             </div>
-
+            
         </div>
-
-
+        
         <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">Python permite extender LibreOffice de manera poderosa y flexible para automatizar tareas complejas.</p>
     </div>
 </div>
@@ -114,7 +90,6 @@ tags:
         <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> Seguridad y cumplimiento de Python: Garantizar el cumplimiento de PCI DSS en un entorno Python</h3>
         <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 45 minutos</p>
     </div>
-
     <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
         <div class="speaker-photo" style="flex-shrink: 0;">
             <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="Mauro Parra" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
@@ -124,42 +99,39 @@ tags:
             <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">Security Engineer</p>
             <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Especialista en seguridad informática y cumplimiento normativo con experiencia en PCI DSS y aplicaciones Python.</p>
             <div class="speaker-links">
-
-
-
+                
+                
+                
             </div>
         </div>
     </div>
-
     <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
         <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">Platicaremos de alinear las aplicaciones Python con los requisitos de PCI, garantizando controles de seguridad y la preparación para el cumplimiento de la normativa en el manejo de datos. Platicaremos de prácticas de codificación segura, metodologías de cifrado, controles de acceso y otros controles. Tópicos: Introducción básica a PCI, Codificación segura en Python, Cifrado de datos en tránsito y en reposo, incluyendo alternativas de tokenización de datos, Docker images como método para usar código inmutable, Controles de acceso orientados a AWS, Bitácoras seguras de cambios y de información de ejecución.</p>
-
-
+        
         <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #dc3545;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #dc3545; font-size: 1rem;"><i class="fas fa-lock"></i> PCI DSS</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Estándar de seguridad</p>
             </div>
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #28a745;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #28a745; font-size: 1rem;"><i class="fas fa-shield-alt"></i> Security</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Seguridad informática</p>
             </div>
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #2496ED;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #2496ED; font-size: 1rem;"><i class="fab fa-docker"></i> Docker</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Contenedores</p>
             </div>
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #FF9900;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #FF9900; font-size: 1rem;"><i class="fab fa-aws"></i> AWS</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Cloud security</p>
             </div>
-
+            
         </div>
-
-
+        
         <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">La seguridad y el cumplimiento normativo son fundamentales en aplicaciones Python que manejan datos sensibles.</p>
     </div>
 </div>
@@ -168,72 +140,49 @@ tags:
 ---
 
 
-## Video del Meetup
-<div class="video-section" style="text-align: center; margin: 2rem 0;">
-    <div style="background: #f8f9fa; padding: 2rem; border-radius: 16px; box-shadow: 0 4px 16px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 1rem 0; color: #dc3545;"><i class="fas fa-tv"></i> ¡Mira las charlas completas!</h3>
-        <div style="position: relative; padding-bottom: 56.25%; height: 0; margin-bottom: 1rem;">
+## ¡Mira las charlas completas!
+<div class="video-section">
+    <div class="video-container">
+        <div class="video-wrapper">
             <iframe
                 src="https://www.youtube.com/embed/gOjfq41I8XY"
-                title="Meetup PythonCDMX 14 2025"
-                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 12px;"
+                title="Meetup PythonCDMX Enero 2025"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen>
-            </iframe>
+            ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=gOjfq41I8XY" style="background: #dc3545; color: white; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; display: inline-block; transition: all 0.3s ease;"><i class="fab fa-youtube"></i> Ver en YouTube</a>
+        <a href="https://www.youtube.com/watch?v=gOjfq41I8XY" class="youtube-btn">
+            <i class="fab fa-youtube"></i> Ver en YouTube
+        </a>
     </div>
 </div>
 ---
 
 
-## Temas y Tecnologías
-<div class="tags-section" style="margin: 2rem 0;">
-    <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
+### Unete a #PythonCDMX
 
-        <a href="/tags/python/" style="background: #3776AB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
-
-        <a href="/tags/libreoffice/" style="background: #18A303; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-file-alt"></i> LibreOffice</a>
-
-        <a href="/tags/security/" style="background: #dc3545; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-lock"></i> Security</a>
-
-        <a href="/tags/pci-dss/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-shield-alt"></i> PCI DSS</a>
-
-        <a href="/tags/automation/" style="background: #6c757d; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-cog"></i> Automation</a>
-
-        <a href="/tags/docker/" style="background: #2496ED; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-docker"></i> Docker</a>
-
-    </div>
-</div>
-
----
-
-## Networking
-<div class="networking-section" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; text-align: center; box-shadow: 0 8px 32px rgba(40, 167, 69, 0.3);">
-    <h3 style="margin: 0 0 1rem 0; font-size: 1.5rem;"><i class="fas fa-comments"></i> ¡Conecta con la comunidad!</h3>
-    <p style="margin: 0; font-size: 1.1rem; line-height: 1.6;">
-        Después de las charlas habrá un tiempo de networking donde podrás platicar con programadores de diferentes niveles e intereses.
-        ¡Es la oportunidad perfecta para hacer conexiones profesionales y aprender de otros desarrolladores!
-    </p>
-</div>
-
----
-
-## Enlaces de la Comunidad
-<div class="community-links" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 2rem 0;">
-    <a href="https://t.me/PythonCDMX" style="background: #0088cc; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        <i class="fab fa-telegram"></i> Telegram
-    </a>
-    <a href="https://www.meetup.com/python-mexico" style="background: #e51937; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        <i class="fab fa-meetup"></i> Meetup
-    </a>
-    <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        <i class="fab fa-youtube"></i> YouTube
-    </a>
-    <a href="https://github.com/PythonMexico/pythonCDMX" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        <i class="fab fa-github"></i> GitHub
-    </a>
+<div class="community-links">
+    
+        <a href="https://t.me/PythonCDMX" class="community-link telegram">
+            <i class="fab fa-telegram"></i> Telegram
+        </a>
+        <a href="https://www.meetup.com/python-mexico" class="community-link meetup">
+            <i class="fab fa-meetup"></i> Meetup
+        </a>
+        <a href="https://www.youtube.com/@PythonMexico" class="community-link youtube">
+            <i class="fab fa-youtube"></i> YouTube
+        </a>
+        <a href="https://github.com/PythonMexico/pythonCDMX" class="community-link github">
+            <i class="fab fa-github"></i> GitHub
+        </a>
+        <a href="https://www.instagram.com/pythoncdmx" class="community-link instagram">
+            <i class="fab fa-instagram"></i> Instagram
+        </a>
+        <a href="https://www.linkedin.com/company/pythoncdmx" class="community-link linkedin">
+            <i class="fab fa-linkedin"></i> LinkedIn
+        </a>
+    
 </div>
 
 ---
