--- a/docs/meetups/2025/202503-marzo.md
+++ b/docs/meetups/2025/202503-marzo.md
@@ -1,56 +1,36 @@
 ---
 title: "Agentes de IA / PySide6"
-tags:
-
-  - Python
-
-  - AI
-
-  - PySide6
-
-  - GUI
-
-  - LangGraph
-
-  - Desktop Apps
-
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - 11 2025
+# Meetup #PythonCDMX <i class="fab fa-python"></i> - Marzo 2025
 
-<div class="event-highlight" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; text-align: center; box-shadow: 0 8px 32px rgba(102, 126, 234, 0.3);">
-    <h2 style="margin: 0 0 1rem 0; font-size: 2.5rem;"> Agentes de IA / PySide6</h2>
-    <p style="font-size: 1.2rem; margin: 0; opacity: 0.9;">Dos charlas sobre IA y interfaces gráficas</p>
+<div class="meetup-hero">
+    <h1>✨ Agentes de IA / PySide6 ✨</h1>
+    <p class="meetup-subtitle">Dos charlas sobre IA y interfaces gráficas</p>
 </div>
-
-<div class="meetup-header" style="text-align: center; margin-bottom: 2rem;">
-    <img src="/../../images/meetup/202503-pythoncdmx.jpg" alt="Banner del evento" style="max-width: 100%; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
-    </div>
-
-
 
 ## Información del Evento
 
-<div class="event-details" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin: 2rem 0;">
-    <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #28a745; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #28a745;"><i class="fas fa-calendar"></i> Fecha</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Martes 11 de Marzo, 2025</p>
+<div class="event-details">
+    <div class="detail-card date-card">
+        <h3><i class="fas fa-calendar-alt"></i> Fecha</h3>
+        <p>Martes 11 de Marzo, 2025</p>
     </div>
-    <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #007bff; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #007bff;"><i class="fas fa-clock"></i> Hora</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">18:30 - 21:00</p>
+    <div class="detail-card time-card">
+        <h3><i class="fas fa-clock"></i> Hora</h3>
+        <p>18:30 - 21:00</p>
     </div>
-    <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #dc3545; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #dc3545;"><i class="fas fa-map-marker-alt"></i> Lugar</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Wizeline México</p>
+    <div class="detail-card location-card">
+        <h3><i class="fas fa-map-marker-alt"></i> Lugar</h3>
+        <p>Wizeline México</p>
     </div>
-    <div class="detail-card" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); color: white; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #28a745; box-shadow: 0 4px 16px rgba(40, 167, 69, 0.3);">
-        <h3 style="margin: 0 0 0.5rem 0; color: white;"><i class="fas fa-gift"></i> ¡GRATIS!</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Entrada completamente gratuita</p>
+    <div class="detail-card free-card">
+        <h3><i class="fas fa-gift"></i> ¡GRATIS!</h3>
+        <p>Entrada completamente gratuita</p>
     </div>
-    <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #ffc107; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #ffc107;"><i class="fas fa-ticket-alt"></i> RSVP</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;"><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
+    <div class="detail-card rsvp-card">
+        <h3><i class="fas fa-ticket-alt"></i> RSVP</h3>
+        <p><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
     </div>
 </div>
 
@@ -64,7 +44,6 @@ tags:
         <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> Mi Primer Agente de Inteligencia Artificial con Python</h3>
         <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 45 minutos</p>
     </div>
-
     <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
         <div class="speaker-photo" style="flex-shrink: 0;">
             <img src="/../../images/ponentes/202503-PythonCDMX-erick-rivera.jpg" alt="Erik Rivera" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
@@ -74,37 +53,34 @@ tags:
             <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">AI Engineer</p>
             <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Especialista en desarrollo de agentes de IA y machine learning con experiencia en LangGraph y LLMs.</p>
             <div class="speaker-links">
-
-
-
+                
+                
+                
             </div>
         </div>
     </div>
-
     <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
         <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">Introducción práctica al desarrollo de agentes de IA usando Python, enfocada en implementaciones con LangGraph y herramientas open source. Los participantes aprenderán conceptos fundamentales de LLMs y cómo crear agentes inteligentes que puedan realizar tareas autónomas.</p>
-
-
+        
         <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #007bff;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #007bff; font-size: 1rem;"><i class="fas fa-robot"></i> LangGraph</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Framework para agentes</p>
             </div>
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #28a745;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #28a745; font-size: 1rem;"><i class="fas fa-brain"></i> LLMs</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Large Language Models</p>
             </div>
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #10a37f;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #10a37f; font-size: 1rem;"><i class="fas fa-magic"></i> OpenAI</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">API de IA</p>
             </div>
-
+            
         </div>
-
-
+        
         <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">Los agentes de IA representan el futuro del desarrollo de aplicaciones inteligentes y autónomas.</p>
     </div>
 </div>
@@ -114,7 +90,6 @@ tags:
         <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> Interfaces gráficas con PySide6</h3>
         <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 45 minutos</p>
     </div>
-
     <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
         <div class="speaker-photo" style="flex-shrink: 0;">
             <img src="/../../images/ponentes/202503-PythonCDMX-david-sol.jpg" alt="David Sol" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
@@ -124,37 +99,34 @@ tags:
             <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">SRE Engineer</p>
             <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">David Sol creció en el siglo XX, y en su infancia sus padres le dejaban salir a la calle, sin supervisión, a jugar con quién encontrara y a lo que pudiera, con la única condición de que regresara para dormir. Una bicicleta bastaba para recorrer toda su colonia, sin importar carros, perros o baches. Tomaba agua de mangueras de vecinos, y comía lo que encontrara en sus aventuras. Sufrió cortadas, quemaduras, moretones y un hueso roto, los cuales trató a base de tierra fresca, agua y un par de curitas. Tuvo una infancia feliz. Actualmente labora como SRE en Wizeline.</p>
             <div class="speaker-links">
-
-
-
+                
+                
+                
             </div>
         </div>
     </div>
-
     <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
         <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">¿Ya te cansaste de la consola? ¿Quieres hacer una aplicación con interfaz gráfica fuera del navegador, cómo en los buenos tiempos? Sí, lo puedes hacer con Python, con facilidad, elegancia y desempeño. PySide6 es la librería oficial para utilizar QT desde Python. Sí, utiliza Python. Sí, es fácil de aprender y utilizar. Sí, corre en Linux, MacOS e incluso en Windows. ¡Ven a conocerla!</p>
-
-
+        
         <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #41CD52;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #41CD52; font-size: 1rem;"><i class="fas fa-desktop"></i> PySide6</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Qt para Python</p>
             </div>
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #41CD52;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #41CD52; font-size: 1rem;"><i class="fas fa-palette"></i> Qt</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Framework GUI</p>
             </div>
-
+            
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #6c757d;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #6c757d; font-size: 1rem;"><i class="fas fa-laptop"></i> Desktop Apps</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Aplicaciones de escritorio</p>
             </div>
-
+            
         </div>
-
-
+        
         <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">PySide6 permite crear aplicaciones de escritorio profesionales con Python de manera sencilla y eficiente.</p>
     </div>
 </div>
@@ -163,72 +135,49 @@ tags:
 ---
 
 
-## Video del Meetup
-<div class="video-section" style="text-align: center; margin: 2rem 0;">
-    <div style="background: #f8f9fa; padding: 2rem; border-radius: 16px; box-shadow: 0 4px 16px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 1rem 0; color: #dc3545;"><i class="fas fa-tv"></i> ¡Mira las charlas completas!</h3>
-        <div style="position: relative; padding-bottom: 56.25%; height: 0; margin-bottom: 1rem;">
+## ¡Mira las charlas completas!
+<div class="video-section">
+    <div class="video-container">
+        <div class="video-wrapper">
             <iframe
                 src="https://www.youtube.com/embed/ebeqlVkhKNs"
-                title="Meetup PythonCDMX 11 2025"
-                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 12px;"
+                title="Meetup PythonCDMX Marzo 2025"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen>
-            </iframe>
+            ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=ebeqlVkhKNs" style="background: #dc3545; color: white; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; display: inline-block; transition: all 0.3s ease;"><i class="fab fa-youtube"></i> Ver en YouTube</a>
+        <a href="https://www.youtube.com/watch?v=ebeqlVkhKNs" class="youtube-btn">
+            <i class="fab fa-youtube"></i> Ver en YouTube
+        </a>
     </div>
 </div>
 ---
 
 
-## Temas y Tecnologías
-<div class="tags-section" style="margin: 2rem 0;">
-    <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
+### Unete a #PythonCDMX
 
-        <a href="/tags/python/" style="background: #3776AB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
-
-        <a href="/tags/ai/" style="background: #007bff; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-robot"></i> AI</a>
-
-        <a href="/tags/pyside6/" style="background: #41CD52; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-desktop"></i> PySide6</a>
-
-        <a href="/tags/gui/" style="background: #ffc107; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-palette"></i> GUI</a>
-
-        <a href="/tags/langgraph/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-brain"></i> LangGraph</a>
-
-        <a href="/tags/desktop-apps/" style="background: #6c757d; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-laptop"></i> Desktop Apps</a>
-
-    </div>
-</div>
-
----
-
-## Networking
-<div class="networking-section" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; text-align: center; box-shadow: 0 8px 32px rgba(40, 167, 69, 0.3);">
-    <h3 style="margin: 0 0 1rem 0; font-size: 1.5rem;"><i class="fas fa-comments"></i> ¡Conecta con la comunidad!</h3>
-    <p style="margin: 0; font-size: 1.1rem; line-height: 1.6;">
-        Después de las charlas habrá un tiempo de networking donde podrás platicar con programadores de diferentes niveles e intereses.
-        ¡Es la oportunidad perfecta para hacer conexiones profesionales y aprender de otros desarrolladores!
-    </p>
-</div>
-
----
-
-## Enlaces de la Comunidad
-<div class="community-links" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 2rem 0;">
-    <a href="https://t.me/PythonCDMX" style="background: #0088cc; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        <i class="fab fa-telegram"></i> Telegram
-    </a>
-    <a href="https://www.meetup.com/python-mexico" style="background: #e51937; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        <i class="fab fa-meetup"></i> Meetup
-    </a>
-    <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        <i class="fab fa-youtube"></i> YouTube
-    </a>
-    <a href="https://github.com/PythonMexico/pythonCDMX" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        <i class="fab fa-github"></i> GitHub
-    </a>
+<div class="community-links">
+    
+        <a href="https://t.me/PythonCDMX" class="community-link telegram">
+            <i class="fab fa-telegram"></i> Telegram
+        </a>
+        <a href="https://www.meetup.com/python-mexico" class="community-link meetup">
+            <i class="fab fa-meetup"></i> Meetup
+        </a>
+        <a href="https://www.youtube.com/@PythonMexico" class="community-link youtube">
+            <i class="fab fa-youtube"></i> YouTube
+        </a>
+        <a href="https://github.com/PythonMexico/pythonCDMX" class="community-link github">
+            <i class="fab fa-github"></i> GitHub
+        </a>
+        <a href="https://www.instagram.com/pythoncdmx" class="community-link instagram">
+            <i class="fab fa-instagram"></i> Instagram
+        </a>
+        <a href="https://www.linkedin.com/company/pythoncdmx" class="community-link linkedin">
+            <i class="fab fa-linkedin"></i> LinkedIn
+        </a>
+    
 </div>
 
 ---
