--- a/docs/meetups/2025/202504-abril.md
+++ b/docs/meetups/2025/202504-abril.md
@@ -1,73 +1,55 @@
 ---
 title: "Kubernetes y IA"
-tags:
-
-  - Python
-
-  - Kubernetes
-
-  - AI
-
-  - MLOps
-
-  - TensorFlow
-
-  - Cloud Native
-
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - 8 2025
+# Meetup #PythonCDMX <i class="fab fa-python"></i> - Abril 2025
 
-<div class="event-highlight" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; text-align: center; box-shadow: 0 8px 32px rgba(102, 126, 234, 0.3);">
-    <h2 style="margin: 0 0 1rem 0; font-size: 2.5rem;">Kubernetes y IA</h2>
-    <p style="font-size: 1.2rem; margin: 0; opacity: 0.9;">Desplegando modelos de IA en Kubernetes</p>
-</div>
-
-<div class="meetup-header" style="text-align: center; margin-bottom: 2rem;">
-    <img src="/../../images/meetup/202504-pythoncdmx.jpg" alt="Banner del evento" style="max-width: 100%; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
+<div class="meetup-hero">
+    <h1>✨ Kubernetes y IA ✨</h1>
+    <p class="meetup-subtitle">Desplegando modelos de IA en Kubernetes</p>
 </div>
 
 ## Información del Evento
 
-<div class="event-details" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin: 2rem 0;">
-    <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #28a745; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #28a745;"><i class="fas fa-calendar"></i> Fecha</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Martes 8 de Abril, 2025</p>
+<div class="event-details">
+    <div class="detail-card date-card">
+        <h3><i class="fas fa-calendar-alt"></i> Fecha</h3>
+        <p>Martes 8 de Abril, 2025</p>
     </div>
-    <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #007bff; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #007bff;"><i class="fas fa-clock"></i> Hora</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">18:30 - 21:00</p>
+    <div class="detail-card time-card">
+        <h3><i class="fas fa-clock"></i> Hora</h3>
+        <p>18:30 - 21:00</p>
     </div>
-    <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #dc3545; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #dc3545;"><i class="fas fa-map-marker-alt"></i> Lugar</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Wizeline México</p>
+    <div class="detail-card location-card">
+        <h3><i class="fas fa-map-marker-alt"></i> Lugar</h3>
+        <p>Wizeline México</p>
     </div>
-    <div class="detail-card" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); color: white; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #28a745; box-shadow: 0 4px 16px rgba(40, 167, 69, 0.3);">
-        <h3 style="margin: 0 0 0.5rem 0; color: white;"><i class="fas fa-gift"></i> ¡GRATIS!</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Entrada completamente gratuita</p>
+    <div class="detail-card free-card">
+        <h3><i class="fas fa-gift"></i> ¡GRATIS!</h3>
+        <p>Entrada completamente gratuita</p>
     </div>
-    <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #ffc107; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #ffc107;"><i class="fas fa-ticket-alt"></i> RSVP</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;"><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
+    <div class="detail-card rsvp-card">
+        <h3><i class="fas fa-ticket-alt"></i> RSVP</h3>
+        <p><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
     </div>
 </div>
 
 ---
 
-## <i class="fas fa-microphone"></i> Ponente
+## Ponente
 
-<div class="speaker-section" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; display: flex; align-items: center; gap: 2rem; box-shadow: 0 8px 32px rgba(102, 126, 234, 0.3);">
-    <div class="speaker-photo" style="flex-shrink: 0;">
-        <img src="/../../images/ponentes/202504-PythonCDMX-carlos-reyes.png" alt="Carlos Reyes" style="width: 150px; height: 150px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+<div class="speaker-section">
+    <div class="speaker-photo">
+        <img src="/../../images/ponentes/202504-PythonCDMX-carlos-reyes.png" alt="Carlos Reyes">
     </div>
     <div class="speaker-info">
-        <h2 style="margin: 0 0 0.5rem 0; font-size: 2rem;">Carlos Reyes</h2>
-        <p style="margin: 0 0 1rem 0; font-size: 1.1rem; opacity: 0.9;">DevOps Engineer</p>
-        <p style="margin: 0 0 1rem 0; line-height: 1.6;">Especialista en Kubernetes y MLOps con experiencia en despliegue de aplicaciones de IA.</p>
+        <h2>Carlos Reyes</h2>
+        <p class="speaker-role">DevOps Engineer</p>
+        <p class="speaker-bio">Especialista en Kubernetes y MLOps con experiencia en despliegue de aplicaciones de IA.</p>
         <div class="speaker-links">
-
-
-
+            
+            
+            
         </div>
     </div>
 </div>
@@ -76,103 +58,61 @@ tags:
 
 ## Descripción de la Charla
 
-<div class="talk-description" style="background: #f8f9fa; padding: 2rem; border-radius: 16px; margin: 2rem 0; border-left: 6px solid #28a745;">
-    <h3 style="margin: 0 0 1rem 0; color: #28a745;"><i class="fas fa-rocket"></i> El para qué cosa de Quien: Kubernetes y AI</h3>
-    <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem;">En esta sesión veremos un RoadMap de herramientas que nos permiten desplegar modelos de AI, MLOps y aplicaciones de inteligencia artificial en un cluster de Kubernetes. El propósito es identificar los frameworks de AI y los casos de uso en los que podemos utilizarlos para empezar a crear nuestros modelos, entrenarlos, automatizarlos y obtener métricas. Algunas de las herramientas que veremos son: KubeFlow, KServe, TensorFlow, OpenVino, Jupyter, MLflow, Qdrant.</p>
-    <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-
-        <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: #326CE5;"><i class="fab fa-docker"></i> Kubernetes</h4>
-            <p style="margin: 0; font-size: 0.9rem;">Orquestación de contenedores</p>
-        </div>
-
-        <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: #FF6B6B;"><i class="fas fa-robot"></i> KubeFlow</h4>
-            <p style="margin: 0; font-size: 0.9rem;">MLOps platform</p>
-        </div>
-
-        <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: #FF6F00;"><i class="fas fa-brain"></i> TensorFlow</h4>
-            <p style="margin: 0; font-size: 0.9rem;">Machine Learning</p>
-        </div>
-
-        <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: #019733;"><i class="fas fa-chart-bar"></i> MLflow</h4>
-            <p style="margin: 0; font-size: 0.9rem;">ML lifecycle</p>
-        </div>
-
-    </div>
-    <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem;">Kubernetes proporciona una plataforma robusta para desplegar y gestionar aplicaciones de IA a escala.</p>
-</div>
-
----
-
-
-## Video del Meetup
-<div class="video-section" style="text-align: center; margin: 2rem 0;">
-    <div style="background: #f8f9fa; padding: 2rem; border-radius: 16px; box-shadow: 0 4px 16px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 1rem 0; color: #dc3545;"><i class="fas fa-tv"></i> ¡Mira la charla completa!</h3>
-        <div style="position: relative; padding-bottom: 56.25%; height: 0; margin-bottom: 1rem;">
-            <iframe
-                src="https://www.youtube.com/embed/ebeqlVkhKNs"
-                title="Meetup PythonCDMX 8 2025"
-                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 12px;"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen>
-            </iframe>
-        </div>
-        <a href="https://www.youtube.com/watch?v=ebeqlVkhKNs" style="background: #dc3545; color: white; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; display: inline-block; transition: all 0.3s ease;"><i class="fab fa-youtube"></i> Ver en YouTube</a>
-    </div>
-</div>
----
-
-
-## Temas y Tecnologías
-<div class="tags-section" style="margin: 2rem 0;">
-    <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
-
-        <a href="/tags/python/" style="background: #3776AB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
-
-        <a href="/tags/kubernetes/" style="background: #326CE5; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-docker"></i> Kubernetes</a>
-
-        <a href="/tags/ai/" style="background: #FF6B6B; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-robot"></i> AI</a>
-
-        <a href="/tags/mlops/" style="background: #6f42c1; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-cog"></i> MLOps</a>
-
-        <a href="/tags/tensorflow/" style="background: #FF6F00; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-brain"></i> TensorFlow</a>
-
-        <a href="/tags/cloud-native/" style="background: #87CEEB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-cloud"></i> Cloud Native</a>
-
-    </div>
-</div>
-
----
-
-## Networking
-<div class="networking-section" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; text-align: center; box-shadow: 0 8px 32px rgba(40, 167, 69, 0.3);">
-    <h3 style="margin: 0 0 1rem 0; font-size: 1.5rem;"><i class="fas fa-comments"></i> ¡Conecta con la comunidad!</h3>
-    <p style="margin: 0; font-size: 1.1rem; line-height: 1.6;">
-        Después de la charla habrá un tiempo de networking donde podrás platicar con programadores de diferentes niveles e intereses.
-        ¡Es la oportunidad perfecta para hacer conexiones profesionales y aprender de otros desarrolladores!
+<div class="talk-description">
+    <h3><i class="fas fa-rocket"></i> El para qué cosa de Quien: Kubernetes y AI</h3>
+    <p>¿Tienes esa gran idea, pero no sabes cómo organizar tu ambiente virtual, tu código y todas las herramientas de desarrollo?</p>
+    <p>En esta charla exploraremos las mejores prácticas para configurar un entorno de desarrollo Python profesional:</p>
+    <ul style="line-height: 1.8; font-size: 1.1rem; margin: 1.5rem 0; padding-left: 2rem;">
+        
+    </ul>
+    <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; font-style: italic; color: #666;">
+        <i class="fas fa-info-circle"></i> Kubernetes proporciona una plataforma robusta para desplegar y gestionar aplicaciones de IA a escala.
     </p>
 </div>
 
 ---
 
-## Enlaces de la Comunidad
-<div class="community-links" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 2rem 0;">
-    <a href="https://t.me/PythonCDMX" style="background: #0088cc; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+## ¡Mira la charla completa!
+
+<div class="video-section">
+    <div class="video-container">
+        <div class="video-wrapper">
+            <iframe
+                src="https://www.youtube.com/embed/ebeqlVkhKNs"
+                title="Meetup PythonCDMX Abril 2025"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen>
+            ></iframe>
+        </div>
+        <a href="https://www.youtube.com/watch?v=ebeqlVkhKNs" class="youtube-btn">
+            <i class="fab fa-youtube"></i> Ver en YouTube
+        </a>
+    </div>
+</div>
+
+---
+
+### Unete a #PythonCDMX
+
+<div class="community-links">
+    <a href="https://t.me/PythonCDMX" class="community-link telegram">
         <i class="fab fa-telegram"></i> Telegram
     </a>
-    <a href="https://www.meetup.com/python-mexico" style="background: #e51937; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+    <a href="https://www.meetup.com/python-mexico" class="community-link meetup">
         <i class="fab fa-meetup"></i> Meetup
     </a>
-    <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+    <a href="https://www.youtube.com/@PythonMexico" class="community-link youtube">
         <i class="fab fa-youtube"></i> YouTube
     </a>
-    <a href="https://github.com/PythonMexico/pythonCDMX" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+    <a href="https://github.com/PythonMexico/pythonCDMX" class="community-link github">
         <i class="fab fa-github"></i> GitHub
+    </a>
+    <a href="https://www.instagram.com/pythoncdmx" class="community-link instagram">
+        <i class="fab fa-instagram"></i> Instagram
+    </a>
+    <a href="https://www.linkedin.com/company/pythoncdmx" class="community-link linkedin">
+        <i class="fab fa-linkedin"></i> LinkedIn
     </a>
 </div>
 
