--- a/docs/meetups/2024/202407-julio.md
+++ b/docs/meetups/2024/202407-julio.md
@@ -30,7 +30,7 @@ title: "¡Doble Charla! Python sin GIL / Esquemas ETL"
     </div>
     <div class="detail-card rsvp-card">
         <h3><i class="fas fa-ticket-alt"></i> RSVP</h3>
-        <p><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
+        <p><a href="https://www.meetup.com/python-mexico/">¡Regístrate aquí!</a></p>
     </div>
 </div>
 
@@ -39,19 +39,19 @@ title: "¡Doble Charla! Python sin GIL / Esquemas ETL"
 ## Charlas y Ponentes
 
 
-<div class="talk-section" style="margin: 3rem 0; border: 2px solid #e9ecef; border-radius: 16px; overflow: hidden;">
-    <div class="talk-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 1.5rem; text-align: center;">
-        <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> El futuro de Python sin GIL</h3>
-        <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 45 minutos</p>
+<div class="talk-section">
+    <div class="talk-header">
+        <h3><i class="fas fa-rocket"></i> El futuro de Python sin GIL</h3>
+        <p><i class="fas fa-stopwatch"></i> 45 minutos</p>
     </div>
-    <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
-        <div class="speaker-photo" style="flex-shrink: 0;">
-            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="Konstantin Spirin" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+    <div class="speaker-section">
+        <div class="speaker-photo">
+            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="Konstantin Spirin">
         </div>
         <div class="speaker-info">
-            <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; color: #333;">Konstantin Spirin</h4>
-            <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">Python Core Developer</p>
-            <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Desarrollador del core de Python con experiencia en optimización y concurrencia.</p>
+            <h4>Konstantin Spirin</h4>
+            <p>Python Core Developer</p>
+            <p>Desarrollador del core de Python con experiencia en optimización y concurrencia.</p>
             <div class="speaker-links">
                 
                 
@@ -59,45 +59,45 @@ title: "¡Doble Charla! Python sin GIL / Esquemas ETL"
             </div>
         </div>
     </div>
-    <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">La charla se enfocará en explorar el Global Interpreter Lock (GIL) en Python impide la ejecución simultánea de múltiples hilos, limitando el rendimiento en sistemas multicore. Exploraremos su funcionamiento actual, los problemas que causa y las soluciones futuras propuestas por Python. ¡Nuestra primer charla en Inglés!</p>
+    <div class="talk-description">
+        <p>La charla se enfocará en explorar el Global Interpreter Lock (GIL) en Python impide la ejecución simultánea de múltiples hilos, limitando el rendimiento en sistemas multicore. Exploraremos su funcionamiento actual, los problemas que causa y las soluciones futuras propuestas por Python. ¡Nuestra primer charla en Inglés!</p>
         
-        <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
+        <div class="tech-stack">
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #dc3545;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #dc3545; font-size: 1rem;"><i class="fas fa-lock"></i> GIL</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Global Interpreter Lock</p>
+            <div>
+                <h5><i class="fas fa-lock"></i> GIL</h5>
+                <p>Global Interpreter Lock</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #007bff;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #007bff; font-size: 1rem;"><i class="fas fa-bolt"></i> Concurrency</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Concurrencia</p>
+            <div>
+                <h5><i class="fas fa-bolt"></i> Concurrency</h5>
+                <p>Concurrencia</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #28a745;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #28a745; font-size: 1rem;"><i class="fas fa-rocket"></i> Performance</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Rendimiento</p>
+            <div>
+                <h5><i class="fas fa-rocket"></i> Performance</h5>
+                <p>Rendimiento</p>
             </div>
             
         </div>
         
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">La eliminación del GIL representa un cambio fundamental en el futuro de Python para aplicaciones concurrentes.</p>
+        <p>La eliminación del GIL representa un cambio fundamental en el futuro de Python para aplicaciones concurrentes.</p>
     </div>
 </div>
 
-<div class="talk-section" style="margin: 3rem 0; border: 2px solid #e9ecef; border-radius: 16px; overflow: hidden;">
-    <div class="talk-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 1.5rem; text-align: center;">
-        <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> Python y los esquemas ETLs</h3>
-        <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 45 minutos</p>
+<div class="talk-section">
+    <div class="talk-header">
+        <h3><i class="fas fa-rocket"></i> Python y los esquemas ETLs</h3>
+        <p><i class="fas fa-stopwatch"></i> 45 minutos</p>
     </div>
-    <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
-        <div class="speaker-photo" style="flex-shrink: 0;">
-            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="Hugo Ramirez" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+    <div class="speaker-section">
+        <div class="speaker-photo">
+            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="Hugo Ramirez">
         </div>
         <div class="speaker-info">
-            <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; color: #333;">Hugo Ramirez</h4>
-            <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">Data Engineer</p>
-            <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Especialista en ingeniería de datos y procesamiento ETL con Python.</p>
+            <h4>Hugo Ramirez</h4>
+            <p>Data Engineer</p>
+            <p>Especialista en ingeniería de datos y procesamiento ETL con Python.</p>
             <div class="speaker-links">
                 
                 
@@ -105,29 +105,29 @@ title: "¡Doble Charla! Python sin GIL / Esquemas ETL"
             </div>
         </div>
     </div>
-    <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">Ideal para profesionales y aficionados que buscan profundizar en técnicas avanzadas, herramientas y mejores prácticas en el manejo y análisis de datos con Python. Esta charla posee un repositorio abierto con un ejemplo base que va dirigido a todo público.</p>
+    <div class="talk-description">
+        <p>Ideal para profesionales y aficionados que buscan profundizar en técnicas avanzadas, herramientas y mejores prácticas en el manejo y análisis de datos con Python. Esta charla posee un repositorio abierto con un ejemplo base que va dirigido a todo público.</p>
         
-        <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
+        <div class="tech-stack">
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #007bff;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #007bff; font-size: 1rem;"><i class="fas fa-sync-alt"></i> ETL</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Extract, Transform, Load</p>
+            <div>
+                <h5><i class="fas fa-sync-alt"></i> ETL</h5>
+                <p>Extract, Transform, Load</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #28a745;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #28a745; font-size: 1rem;"><i class="fas fa-chart-bar"></i> Data Processing</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Procesamiento de datos</p>
+            <div>
+                <h5><i class="fas fa-chart-bar"></i> Data Processing</h5>
+                <p>Procesamiento de datos</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #ffc107;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #ffc107; font-size: 1rem;"><i class="fas fa-database"></i> Big Data</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Datos masivos</p>
+            <div>
+                <h5><i class="fas fa-database"></i> Big Data</h5>
+                <p>Datos masivos</p>
             </div>
             
         </div>
         
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">Los esquemas ETL son fundamentales para el procesamiento y análisis de datos a gran escala.</p>
+        <p>Los esquemas ETL son fundamentales para el procesamiento y análisis de datos a gran escala.</p>
     </div>
 </div>
 
@@ -182,8 +182,8 @@ title: "¡Doble Charla! Python sin GIL / Esquemas ETL"
 
 ---
 
-<div style="text-align: center; margin-top: 3rem; padding: 2rem; background: #f8f9fa; border-radius: 12px;">
-    <p style="margin: 0; color: #6c757d; font-style: italic;">
+<div>
+    <p>
         *Última actualización: Generado automáticamente*
     </p>
 </div>
