Se sustituye texto de redes sociales y tabla de links por include.

--- a/docs/meetups/2025/202504-abril.md
+++ b/docs/meetups/2025/202504-abril.md
@@ -90,36 +90,12 @@ title: "Kubernetes y IA"
         </a>
     </div>
 </div>
+---
+
+--8<-- "components/community-links.md"
 
 ---
 
-### Unete a #PythonCDMX
-
-<div class="community-links">
-    <a href="https://t.me/PythonCDMX" class="community-link telegram">
-        <i class="fab fa-telegram"></i> Telegram
-    </a>
-    <a href="https://www.meetup.com/python-mexico" class="community-link meetup">
-        <i class="fab fa-meetup"></i> Meetup
-    </a>
-    <a href="https://www.youtube.com/@PythonMexico" class="community-link youtube">
-        <i class="fab fa-youtube"></i> YouTube
-    </a>
-    <a href="https://github.com/PythonMexico/pythonCDMX" class="community-link github">
-        <i class="fab fa-github"></i> GitHub
-    </a>
-    <a href="https://www.instagram.com/pythoncdmx" class="community-link instagram">
-        <i class="fab fa-instagram"></i> Instagram
-    </a>
-    <a href="https://www.linkedin.com/company/pythoncdmx" class="community-link linkedin">
-        <i class="fab fa-linkedin"></i> LinkedIn
-    </a>
-</div>
+--8<-- "components/quick-navigation.md"
 
 ---
-
-<div>
-    <p>
-        *Última actualización: Generado automáticamente*
-    </p>
-</div>
